--- a/docs/src/content/docs/osb/Raids/tob.mdx
+++ b/docs/src/content/docs/osb/Raids/tob.mdx
@@ -38,7 +38,7 @@ Your gear score serves only to raise your boost score. The exception to this is 
 
 This is the best-in-slot gear you should use for ToB, substitute the next best items you have.
 
-[[tobmaxgear.webp]
+[[tobmaxgear.webp]]
 
 ### Boost Score
 
