--- a/docs/src/content/docs/osb/Raids/tob.mdx
+++ b/docs/src/content/docs/osb/Raids/tob.mdx
@@ -34,7 +34,7 @@ _- An uncharged scythe will still suffice, however, will only provide a 6% boost
 
 ### Gear Score
 
-Your gear score serves only to raise your boost score. The exception to this is that you cannot go below 80% total gear score or 75% in a specific setup otherwise you will face huge penalties. Gear scores are always rounded up to the nearest whole number, i.e. 99.1% would be rounded to 100%.
+Your gear score serves only to raise your boost score. The exception to this is that you cannot go below 80% total gear score or 75% in a specific setup otherwise you will face huge penalties. You will also face penalties for not having elite void or normal void in your range setup. Gear scores are always rounded up to the nearest whole number, i.e. 99.1% would be rounded to 100%.
 
 This is the best-in-slot gear you should use for ToB, substitute the next best items you have.
 
