--- a/docs/src/content/docs/osb/combat-achievements.mdx
+++ b/docs/src/content/docs/osb/combat-achievements.mdx
@@ -179,6 +179,8 @@ Rewards can be claimed by simply using [[/ca claim]] after completing a new tier
 | Skotizo | Demonic Weakening | 1 in 5 chance per kill |
 | Tempoross | Tempoross Champion | 10x Tempoross KC. |
 | Tempoross | The Lone Angler | 1 in 25 chance per kill |
+| TheHueycoatl | You're a wizard | 1 in 10 chance per kill |
+| TheHueycoatl | Hueycoatl Champion | 1x The Hueycoatl KC |
 | Wintertodt | Leaving No One Behind | 1 in 50 chance per kill |
 | Wintertodt | Can We Fix It? | 1 in 6 chance per kill |
 | Wintertodt | Wintertodt Champion | 10x Wintertodt KC. |
@@ -241,6 +243,9 @@ Rewards can be claimed by simply using [[/ca claim]] after completing a new tier
 | Tempoross | Why Cook? | 1 in 5 chance per kill |
 | The Nightmare | Nightmare Adept | 1x The Nightmare KC |
 | Theatre of Blood: Entry Mode | Theatre of Blood: SM Adept | 1x Theatre of Blood KC. |
+| TheHueycoatl | I'm your son | 1 in 1 chance per kill |
+| TheHueycoatl | Pillar Lover | 1 in 25 chance per kill |
+| TheHueycoatl | Hueycoatl Adept | 10x The Hueycoatl KC |
 | Tombs of Amascut | Movin' on up | 1 in 1 chance per kill |
 | Tombs of Amascut: Entry Mode | Confident Raider | 1x Tombs of Amascut KC. |
 | Tombs of Amascut: Entry Mode | Novice Tomb Explorer | 1x Tombs of Amascut KC. |
@@ -356,6 +361,9 @@ Rewards can be claimed by simply using [[/ca claim]] after completing a new tier
 | Theatre of Blood: Entry Mode | No-Pillar | 1 in 13 chance per kill |
 | Theatre of Blood: Entry Mode | Pass It On | 1 in 13 chance per kill |
 | Theatre of Blood: Entry Mode | Don't Look at Me! | 1 in 22 chance per kill |
+| TheHueycoatl | Hueycoatl Veteran | 25x The Hueycoatl KC |
+| TheHueycoatl | Perfect Hueycoatl | 1 in 50 chance per kill |
+| TheHueycoatl | Hueycoatl Speed-Trialist | 1 in 50 chance per kill |
 | Thermonuclear Smoke Devil | Hazard Prevention | 1 in 15 chance per kill |
 | Thermonuclear Smoke Devil | Thermonuclear Veteran | 20x Thermonuclear smoke devil KC |
 | Thermonuclear Smoke Devil | Spec'd Out | 1 in 5 chance per kill |
@@ -510,6 +518,8 @@ Rewards can be claimed by simply using [[/ca claim]] after completing a new tier
 | Theatre of Blood | Perfect Nylocas | 1 in 55 chance per kill |
 | Theatre of Blood: Entry Mode | Theatre of Blood: SM Speed-Chaser | 1 in 10 chance per kill |
 | Theatre of Blood: Hard Mode | Hard Mode? Completed It | 1 in 55 chance per kill |
+| TheHueycoatl | Is it a bird? | 1 in 1 chance per kill |
+| TheHueycoatl | Hueycoatl Speed-Chaser | 1 in 70 chance per kill |
 | Tombs of Amascut | Better get movin' | 1 in 55 chance per kill |
 | Tombs of Amascut | Tomb Raider | 50x Tombs of Amascut KC. |
 | Tombs of Amascut | Chompington | 1 in 25 chance per kill |
@@ -629,6 +639,7 @@ Rewards can be claimed by simply using [[/ca claim]] after completing a new tier
 | Theatre of Blood: Hard Mode | Personal Space | 1 in 22 chance per kill |
 | Theatre of Blood: Hard Mode | Royal Affairs | 1 in 44 chance per kill |
 | Theatre of Blood: Hard Mode | Harder Mode II | 1 in 55 chance per kill |
+| TheHueycoatl | Hueycoatl Speed-Runner | 1 in 100 chance per kill |
 | Tombs of Amascut: Expert Mode | All Praise Zebak | 1 in 22 chance per kill |
 | Tombs of Amascut: Expert Mode | Amascut's Remnant | Items Must Be in CL: 1x Cursed phalanx |
 | Tombs of Amascut: Expert Mode | Expert Tomb Raider | Complete the Tombs of Amascut (Expert mode) 25 times. |
