--- a/docs/src/content/docs/osb/combat-achievements.mdx
+++ b/docs/src/content/docs/osb/combat-achievements.mdx
@@ -139,6 +139,8 @@ Rewards can be claimed by simply using [[/ca claim]] after completing a new tier
 <TabItem label="Medium">
 | Monster | Task Name | How To Unlock |
 | -- | -- | -- |
+| Amoxliatl | Temotli Triumph | 1 in 10 chance per kill |
+| Amoxliatl | Amoxliatl Champion | 1x Amoxliatl KC |
 | Barrows | Pray for Success | 1 in 10 chance per kill |
 | Barrows | Barrows Champion | 25x Barrows KC |
 | Barrows | Can't Touch Me | 1 in 50 chance per kill |
@@ -192,6 +194,11 @@ Rewards can be claimed by simply using [[/ca claim]] after completing a new tier
 | Abyssal Sire | Don't Whip Me | 1 in 10 chance per kill |
 | Abyssal Sire | Don't Stop Moving | 1 in 10 chance per kill |
 | Abyssal Sire | They Grow Up Too Fast | 1 in 10 chance per kill |
+| Amoxliatl | Nagua Negation | 1 in 25 chance per kill |
+| Amoxliatl | Amoxliatl Adept | 20x Amoxliatl KC |
+| Amoxliatl | Totally Shattered | 1 in 50 chance per kill |
+| Amoxliatl | Kemo Makti | 1 in 50 chance per kill |
+| Amoxliatl | Amoxliatl Speed-Trialist | 1 in 70 chance per kill |
 | Barrows | Faithless Crypt Run | 1 in 2 chance per kill |
 | Barrows | Just Like That | 1 in 5 chance per kill |
 | Callisto | Callisto Adept | 10x Callisto KC |
@@ -263,6 +270,8 @@ Rewards can be claimed by simply using [[/ca claim]] after completing a new tier
 | Abyssal Sire | Demonic Rebound | 1 in 10 chance per kill |
 | Abyssal Sire | Respiratory Runner | 1 in 10 chance per kill |
 | Alchemical Hydra | Alchemical Veteran | 75x Alchemical Hydra KC |
+| Amoxliatl | Amoxliatl Speed-Chaser | 1 in 120 chance per kill |
+| Amoxliatl | Without Ralos' Light | 1 in 150 chance per kill |
 | Araxxor | Araxxor Veteran | 25x Araxxor KC |
 | Araxxor | Araxxor Speed-Trialist | 1 in 1 chance per kill |
 | Araxxor | Relaxxor | 1 in 10 chance per kill |
