--- a/docs/src/content/docs/osb/monsters.mdx
+++ b/docs/src/content/docs/osb/monsters.mdx
@@ -216,6 +216,137 @@ You can have one of the following boosts:
 </Tabs>
 ---
 
+## Amoxliatl
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Amoxliatl](https://oldschool.runescape.wiki/w/Amoxliatl)
+
+- You can send your minion to kill this monster using: [[/k name\:Amoxliatl]]
+
+- You can check your KC using: [[/minion kc name\:Amoxliatl]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Amoxliatl]]
+
+- You can check your collection log using: [[/cl name\:Amoxliatl]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Amoxliatl]]
+
+</TabItem>
+<TabItem label="Costs">
+    - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
+
+**Item Cost**
+
+- [[Super restore(4)]] or [[Prayer potion(4)]]
+
+- [[Super combat potion(4)]]
+
+</TabItem>
+<TabItem label="Requirements">
+    [[qp\:100]]
+
+[[prayer\:43]] [[attack\:65]] [[strength\:65]] [[defence\:65]] [[hitpoints\:65]]
+
+**Required Quests**
+
+- The Heart of Darkness
+
+</TabItem>
+<TabItem label="Boosts">
+    <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 5% boost for [[Pendant of ates (inert)]]
+
+---
+
+You can have one of the following boosts:
+
+- 5% boost for [[Dragon claws]]
+
+---
+
+</details>
+<details>
+<summary>Equipped Item Boosts</summary>
+To get these boosts, you need the item equipped in the right setup. The best boost you can use will automatically be used.
+
+Melee gear boosts:
+
+- 7% boost for [[Avernic defender]]
+
+---
+
+Melee gear boosts:
+
+- 7% boost for [[Amulet of rancour]]
+
+- 2% boost for [[Amulet of torture]]
+
+---
+
+Melee gear boosts:
+
+- 7% boost for [[Infernal cape]]
+
+- 2% boost for [[Fire cape]]
+
+---
+
+Melee gear boosts:
+
+- 7% boost for [[Ferocious gloves]]
+
+- 2% boost for [[Barrows gloves]]
+
+---
+
+Melee gear boosts:
+
+- 10% boost for [[Inquisitor's hauberk]]
+
+- 5% boost for [[Torva platebody]]
+
+- 5% boost for [[Bandos chestplate]]
+
+---
+
+Melee gear boosts:
+
+- 10% boost for [[Inquisitor's plateskirt]]
+
+- 5% boost for [[Torva platelegs]]
+
+- 5% boost for [[Bandos tassets]]
+
+---
+
+Melee gear boosts:
+
+- 5% boost for [[Primordial boots]]
+
+---
+
+</details>
+<details>
+<summary>Degradeable/Chargeable Item Boosts</summary>
+These boosts are for items which degrade or have charges.
+
+Melee gear boosts:
+
+- 25% boost for [[Scythe of vitur]]
+
+---
+
+</details>
+</TabItem>
+</Tabs>
+---
+
 ## Araxxor
 
 <Tabs>
