Various changes/fixes

--- a/docs/src/content/docs/osb/monsters.mdx
+++ b/docs/src/content/docs/osb/monsters.mdx
@@ -850,6 +850,60 @@ You can have one of the following boosts:
 </Tabs>
 ---
 
+## Bloodveld
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Bloodveld](https://oldschool.runescape.wiki/w/Bloodveld)
+
+- You can send your minion to kill this monster using: [[/k name\:Bloodveld]]
+
+- You can check your KC using: [[/minion kc name\:Bloodveld]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Bloodveld]]
+
+- You can check your collection log using: [[/cl name\:Bloodveld]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Bloodveld]]
+
+</TabItem>
+<TabItem label="Costs">
+    - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
+
+</TabItem>
+<TabItem label="Requirements">
+    [[slayer\:50]]
+
+</TabItem>
+<TabItem label="Boosts">
+    <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 20% boost for [[Emberlight]]
+
+- 15% boost for [[Arclight]]
+
+---
+
+</details>
+<details>
+<summary>Degradeable/Chargeable Item Boosts</summary>
+These boosts are for items which degrade or have charges.
+
+Range gear boosts:
+
+- 10% boost for [[Venator bow]]
+
+---
+
+</details>
+</TabItem>
+</Tabs>
+---
+
 ## Bryophyta
 
 <Tabs>
@@ -1130,6 +1184,49 @@ Wildy gear boosts:
 - 5.5% boost for [[Berserker ring (i)]]
 
 - 5% boost for [[Brimstone ring]]
+
+---
+
+</details>
+</TabItem>
+</Tabs>
+---
+
+## Cave Slime
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Cave Slime](https://oldschool.runescape.wiki/w/Cave%20Slime)
+
+- You can send your minion to kill this monster using: [[/k name\:Cave Slime]]
+
+- You can check your KC using: [[/minion kc name\:Cave Slime]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Cave Slime]]
+
+- You can check your collection log using: [[/cl name\:Cave Slime]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Cave Slime]]
+
+</TabItem>
+<TabItem label="Costs">
+    - No Food Needed
+
+</TabItem>
+<TabItem label="Requirements">
+    [[slayer\:17]]
+
+</TabItem>
+<TabItem label="Boosts">
+    <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 5% boost for [[Slayer helmet]]
+
+- 5% boost for [[Slayer helmet (i)]]
 
 ---
 
@@ -2164,6 +2261,49 @@ These boosts are for items which degrade or have charges.
 Melee gear boosts, it is **required** to have atleast one of these:
 
 - 15% boost for [[Scythe of vitur]]
+
+---
+
+</details>
+</TabItem>
+</Tabs>
+---
+
+## Feral Vampyre
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Feral Vampyre](https://oldschool.runescape.wiki/w/Feral%20Vampyre)
+
+- You can send your minion to kill this monster using: [[/k name\:Feral Vampyre]]
+
+- You can check your KC using: [[/minion kc name\:Feral Vampyre]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Feral Vampyre]]
+
+- You can check your collection log using: [[/cl name\:Feral Vampyre]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Feral Vampyre]]
+
+</TabItem>
+<TabItem label="Costs">
+    - No Food Needed
+
+</TabItem>
+<TabItem label="Requirements">
+    [[qp\:1]]
+
+</TabItem>
+<TabItem label="Boosts">
+    <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 15% boost for [[Blisterwood flail]]
+
+- 12% boost for [[Ivandis flail]]
 
 ---
 
@@ -3463,6 +3603,103 @@ You can have one of the following boosts:
 </Tabs>
 ---
 
+## Newtroost
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Newtroost](https://oldschool.runescape.wiki/w/Newtroost)
+
+- You can send your minion to kill this monster using: [[/k name\:Newtroost]]
+
+- You can check your KC using: [[/minion kc name\:Newtroost]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Newtroost]]
+
+- You can check your collection log using: [[/cl name\:Newtroost]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Newtroost]]
+
+</TabItem>
+<TabItem label="Costs">
+    - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
+
+**Item Cost**
+
+- [[Eye of newt]] [[Feather]]
+
+</TabItem>
+<TabItem label="Requirements">
+    [[qp\:35]]
+
+</TabItem>
+<TabItem label="Boosts">
+    <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 13% boost for [[Bandos chestplate]]
+
+- 13% boost for [[Torva platebody]]
+
+---
+
+You can have one of the following boosts:
+
+- 13% boost for [[Bandos tassets]]
+
+- 13% boost for [[Torva platelegs]]
+
+---
+
+You can have one of the following boosts:
+
+- 11% boost for [[Dragon claws]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Abyssal whip]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Dragon defender]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Amulet of torture]]
+
+- 6% boost for [[Amulet of fury]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Infernal cape]]
+
+- 6% boost for [[Fire cape]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Primordial boots]]
+
+- 6% boost for [[Dragon boots]]
+
+---
+
+</details>
+</TabItem>
+</Tabs>
+---
+
 ## Obor
 
 <Tabs>
@@ -3628,6 +3865,40 @@ Mage gear boosts, it is **required** to have atleast one of these:
 ---
 
 </details>
+</TabItem>
+</Tabs>
+---
+
+## Rabbit
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Rabbit](https://oldschool.runescape.wiki/w/Rabbit)
+
+- You can send your minion to kill this monster using: [[/k name\:Rabbit]]
+
+- You can check your KC using: [[/minion kc name\:Rabbit]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Rabbit]]
+
+- You can check your collection log using: [[/cl name\:Rabbit]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Rabbit]]
+
+</TabItem>
+<TabItem label="Costs">
+    - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
+
+**Item Cost**
+
+- [[Stamina potion(4)]] [[Ruby dragon bolts (e)]]
+
+</TabItem>
+<TabItem label="Requirements">
+    [[qp\:205]]
+
+[[prayer\:43]]
+
 </TabItem>
 </Tabs>
 ---
@@ -3827,6 +4098,47 @@ Melee gear boosts:
 </Tabs>
 ---
 
+## Shadow spider
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Shadow spider](https://oldschool.runescape.wiki/w/Shadow%20spider)
+
+- You can send your minion to kill this monster using: [[/k name\:Shadow spider]]
+
+- You can check your KC using: [[/minion kc name\:Shadow spider]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Shadow spider]]
+
+- You can check your collection log using: [[/cl name\:Shadow spider]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Shadow spider]]
+
+</TabItem>
+<TabItem label="Costs">
+    - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
+
+</TabItem>
+<TabItem label="Requirements">
+    [[qp\:1]]
+
+</TabItem>
+<TabItem label="Boosts">
+    <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 3% boost for [[Spectral spirit shield]]
+
+---
+
+</details>
+</TabItem>
+</Tabs>
+---
+
 ## Skotizo
 
 <Tabs>
@@ -3862,6 +4174,103 @@ You can have one of the following boosts:
 - 55% boost for [[Emberlight]]
 
 - 50% boost for [[Arclight]]
+
+---
+
+</details>
+</TabItem>
+</Tabs>
+---
+
+## Spidine
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Spidine](https://oldschool.runescape.wiki/w/Spidine)
+
+- You can send your minion to kill this monster using: [[/k name\:Spidine]]
+
+- You can check your KC using: [[/minion kc name\:Spidine]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Spidine]]
+
+- You can check your collection log using: [[/cl name\:Spidine]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Spidine]]
+
+</TabItem>
+<TabItem label="Costs">
+    - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
+
+**Item Cost**
+
+- [[Red spiders' eggs]] [[Raw sardine]]
+
+</TabItem>
+<TabItem label="Requirements">
+    [[qp\:35]]
+
+</TabItem>
+<TabItem label="Boosts">
+    <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 13% boost for [[Bandos chestplate]]
+
+- 13% boost for [[Torva platebody]]
+
+---
+
+You can have one of the following boosts:
+
+- 13% boost for [[Bandos tassets]]
+
+- 13% boost for [[Torva platelegs]]
+
+---
+
+You can have one of the following boosts:
+
+- 11% boost for [[Dragon claws]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Abyssal whip]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Dragon defender]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Amulet of torture]]
+
+- 6% boost for [[Amulet of fury]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Infernal cape]]
+
+- 6% boost for [[Fire cape]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Primordial boots]]
+
+- 6% boost for [[Dragon boots]]
 
 ---
 
@@ -4001,6 +4410,103 @@ Wildy gear boosts:
 - 5.5% boost for [[Berserker ring (i)]]
 
 - 5% boost for [[Brimstone ring]]
+
+---
+
+</details>
+</TabItem>
+</Tabs>
+---
+
+## Swordchick
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Swordchick](https://oldschool.runescape.wiki/w/Swordchick)
+
+- You can send your minion to kill this monster using: [[/k name\:Swordchick]]
+
+- You can check your KC using: [[/minion kc name\:Swordchick]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Swordchick]]
+
+- You can check your collection log using: [[/cl name\:Swordchick]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Swordchick]]
+
+</TabItem>
+<TabItem label="Costs">
+    - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
+
+**Item Cost**
+
+- [[Raw swordfish]] [[Raw chicken]]
+
+</TabItem>
+<TabItem label="Requirements">
+    [[qp\:35]]
+
+</TabItem>
+<TabItem label="Boosts">
+    <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 13% boost for [[Bandos chestplate]]
+
+- 13% boost for [[Torva platebody]]
+
+---
+
+You can have one of the following boosts:
+
+- 13% boost for [[Bandos tassets]]
+
+- 13% boost for [[Torva platelegs]]
+
+---
+
+You can have one of the following boosts:
+
+- 11% boost for [[Dragon claws]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Abyssal whip]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Dragon defender]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Amulet of torture]]
+
+- 6% boost for [[Amulet of fury]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Infernal cape]]
+
+- 6% boost for [[Fire cape]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Primordial boots]]
+
+- 6% boost for [[Dragon boots]]
 
 ---
 
@@ -4858,6 +5364,146 @@ You can have one of the following boosts:
 </Tabs>
 ---
 
+## Unicow
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Unicow](https://oldschool.runescape.wiki/w/Unicow)
+
+- You can send your minion to kill this monster using: [[/k name\:Unicow]]
+
+- You can check your KC using: [[/minion kc name\:Unicow]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Unicow]]
+
+- You can check your collection log using: [[/cl name\:Unicow]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Unicow]]
+
+</TabItem>
+<TabItem label="Costs">
+    - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
+
+**Item Cost**
+
+- [[Cowhide]] [[Unicorn horn]]
+
+</TabItem>
+<TabItem label="Requirements">
+    [[qp\:35]]
+
+</TabItem>
+<TabItem label="Boosts">
+    <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 13% boost for [[Bandos chestplate]]
+
+- 13% boost for [[Torva platebody]]
+
+---
+
+You can have one of the following boosts:
+
+- 13% boost for [[Bandos tassets]]
+
+- 13% boost for [[Torva platelegs]]
+
+---
+
+You can have one of the following boosts:
+
+- 11% boost for [[Dragon claws]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Abyssal whip]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Dragon defender]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Amulet of torture]]
+
+- 6% boost for [[Amulet of fury]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Infernal cape]]
+
+- 6% boost for [[Fire cape]]
+
+---
+
+You can have one of the following boosts:
+
+- 15% boost for [[Primordial boots]]
+
+- 6% boost for [[Dragon boots]]
+
+---
+
+</details>
+</TabItem>
+</Tabs>
+---
+
+## Vampyre Juvinate
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Vampyre Juvinate](https://oldschool.runescape.wiki/w/Vampyre%20Juvinate)
+
+- You can send your minion to kill this monster using: [[/k name\:Vampyre Juvinate]]
+
+- You can check your KC using: [[/minion kc name\:Vampyre Juvinate]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Vampyre Juvinate]]
+
+- You can check your collection log using: [[/cl name\:Vampyre Juvinate]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Vampyre Juvinate]]
+
+</TabItem>
+<TabItem label="Costs">
+    - No Food Needed
+
+</TabItem>
+<TabItem label="Requirements">
+    [[qp\:1]]
+
+</TabItem>
+<TabItem label="Boosts">
+    <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 15% boost for [[Blisterwood flail]]
+
+- 12% boost for [[Ivandis flail]]
+
+---
+
+</details>
+</TabItem>
+</Tabs>
+---
+
 ## Vardorvis
 
 <Tabs>
@@ -5504,6 +6150,61 @@ These boosts are applied from just being in your bank, and do not need to be equ
 You can have one of the following boosts:
 
 - 10% boost for [[Wolfbane]]
+
+---
+
+</details>
+</TabItem>
+</Tabs>
+---
+
+## Zombie pirate
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Zombie pirate](https://oldschool.runescape.wiki/w/Zombie%20pirate)
+
+- You can send your minion to kill this monster using: [[/k name\:Zombie pirate]]
+
+- You can check your KC using: [[/minion kc name\:Zombie pirate]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Zombie pirate]]
+
+- You can check your collection log using: [[/cl name\:Zombie pirate]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Zombie pirate]]
+
+- You can dwarf multicannon this monster [[/k name\:Zombie pirate method\:cannon]]
+
+- This monster is in the wilderness, and you can die to PKers when killing it. As such, you will always use your "wildy" gear setup when killing this monster.
+
+</TabItem>
+<TabItem label="Costs">
+    - No Food Needed
+
+**Item Cost**
+
+- [[Blighted super restore(4)]] or [[Super restore(4)]] or [[Prayer potion(4)]]
+
+- [[Burning amulet(5)]]
+
+</TabItem>
+<TabItem label="Requirements">
+    [[prayer\:43]] [[hitpoints\:40]]
+
+</TabItem>
+<TabItem label="Boosts">
+    <details>
+<summary>Equipped Item Boosts</summary>
+To get these boosts, you need the item equipped in the right setup. The best boost you can use will automatically be used.
+
+Wildy gear boosts:
+
+- 25% boost for [[Venator bow]]
+
+- 20% boost for [[Webweaver bow]]
+
+- 20% boost for [[Craw's bow]]
 
 ---
 
