--- a/docs/src/content/docs/osb/combat-achievements.mdx
+++ b/docs/src/content/docs/osb/combat-achievements.mdx
@@ -2,6 +2,7 @@
 title: "Combat Achievements"
 sidebar:
   order: 2
+tableOfContents: false
 ---
 
 import { Tabs, TabItem } from "@astrojs/starlight/components";
