Warped monsters, Zombie pirates, CL items, wiki improvements (#6248)

--- a/docs/src/content/docs/osb/combat-achievements.mdx
+++ b/docs/src/content/docs/osb/combat-achievements.mdx
@@ -2,17 +2,14 @@
 title: "Combat Achievements"
 sidebar:
   order: 2
+tableOfContents: false
 ---
 
 import { Tabs, TabItem } from "@astrojs/starlight/components";
 
-## Getting Started
+You can complete almost all the same combat achievements in the bot, as the real game. However, the method in order to obtain some achievements are different to the real game as the bot simply cannot reflect the nature of the all tasks.
 
-You can complete almost all the same combat achievements in the bot, as the real game. However, the method in order to obtain some achievements are different to the real game as the bot simply cannot reflect the nature of the all tasks. The CA system is point based, the same as in-game.
-
-Some tasks (usually kc-based tasks) are simply claimed retroactively by using:
-
-[[/ca claim]]
+Some tasks (usually kc-based tasks) are claimed retroactively by using: [[/ca claim]]
 
 To view all your complete and incomplete CA tasks, or filter by monster, use:
 
@@ -20,23 +17,9 @@ To view all your complete and incomplete CA tasks, or filter by monster, use:
 [[/ca view type\:complete]]
 [[/ca view name\:Barrows type\:incomplete]]
 
----
-
-
-## Point System
-
-| **Tier**    | **Available Points** | **Total Points For Next Tier** |
-| ----------- | :------------------: | :----------------------------: |
-| Easy        |          33          |               33               |
-| Medium      |          80          |              113               |
-| Hard        |         189          |              302               |
-| Elite       |         504          |              806               |
-| Master      |         645          |             1,451              |
-| Grandmaster |         552          |             2,003              |
-
 ## Rewards
 
-Rewards can be claimed by simply using [[/ca claim]] after completing a new tier. You can use the same command to view how close you are to the next tier.
+Rewards can be claimed by using [[/ca claim]] after completing a new tier. You can use the same command to view how close you are to the next tier.
 
 <Tabs>
   <TabItem label="Easy">
