--- a/docs/src/content/docs/osb/monsters.mdx
+++ b/docs/src/content/docs/osb/monsters.mdx
@@ -6121,6 +6121,66 @@ You can have one of the following boosts:
 </Tabs>
 ---
 
+## Warped Terrorbird
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Warped Terrorbird](https://oldschool.runescape.wiki/w/Warped%20Terrorbird)
+
+- You can send your minion to kill this monster using: [[/k name\:Warped Terrorbird]]
+
+- You can check your KC using: [[/minion kc name\:Warped Terrorbird]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Warped Terrorbird]]
+
+- You can check your collection log using: [[/cl name\:Warped Terrorbird]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Warped Terrorbird]]
+
+</TabItem>
+<TabItem label="Costs">
+    - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
+
+</TabItem>
+<TabItem label="Requirements">
+    **Required Quests**
+
+- The Path of Glouphrie
+
+</TabItem>
+</Tabs>
+---
+
+## Warped Tortoise
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Warped Tortoise](https://oldschool.runescape.wiki/w/Warped%20Tortoise)
+
+- You can send your minion to kill this monster using: [[/k name\:Warped Tortoise]]
+
+- You can check your KC using: [[/minion kc name\:Warped Tortoise]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Warped Tortoise]]
+
+- You can check your collection log using: [[/cl name\:Warped Tortoise]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Warped Tortoise]]
+
+</TabItem>
+<TabItem label="Costs">
+    - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
+
+</TabItem>
+<TabItem label="Requirements">
+    **Required Quests**
+
+- The Path of Glouphrie
+
+</TabItem>
+</Tabs>
+---
+
 ## Werewolf
 
 <Tabs>
