--- a/docs/src/content/docs/getting-started/changelog.mdx
+++ b/docs/src/content/docs/getting-started/changelog.mdx
@@ -45,9 +45,11 @@ import Update from '../../../components/Update.astro';
 
 ### [[wontonstrips]]
 
-fd
-
 - Updated the minion icons wiki page
+
+### [[nwjgit]]
+
+- Added the droptables for Zombie pirates and the Zombie pirate locker
 
 <Update date="26/11/2024" firstHash="4ccf60f038be9a7251cc7f4f9c66f4b181948ab3" secondHash="bc2e2ce8065c2edd5ca9966c9802a7df6c9da596" />
 
