Update monsters wiki page

--- a/docs/src/content/docs/osb/monsters.mdx
+++ b/docs/src/content/docs/osb/monsters.mdx
@@ -3055,7 +3055,7 @@ You can have one of the following boosts:
 
 You can have one of the following boosts:
 
-- 5% boost for [[Keris partisan of breaching]]
+- 15% boost for [[Keris partisan of breaching]]
 
 ---
 
@@ -3764,6 +3764,8 @@ These boosts are applied from just being in your bank, and do not need to be equ
 
 You can have one of the following boosts:
 
+- 10% boost for [[Frozen tablet]]
+
 - 4% boost for [[Saturated heart]]
 
 - 2% boost for [[Imbued heart]]
@@ -3807,14 +3809,6 @@ Range gear boosts:
 
 Mage gear boosts:
 
-- 11% boost for [[Tumeken's shadow]]
-
-- 6% boost for [[Sanguinesti staff]]
-
----
-
-Mage gear boosts:
-
 - 6% boost for [[Ancestral robe top]]
 
 ---
@@ -3827,6 +3821,8 @@ Mage gear boosts:
 
 Range gear boosts:
 
+- 5% boost for [[Blessed dizana's quiver]]
+
 - 3% boost for [[Ava's assembler]]
 
 ---
@@ -3834,6 +3830,12 @@ Range gear boosts:
 Range gear boosts:
 
 - 3% boost for [[Zaryte vambraces]]
+
+---
+
+Mage gear boosts:
+
+- 5% boost for [[Tormented bracelet]]
 
 ---
 
@@ -4691,6 +4693,19 @@ Melee gear boosts:
 </TabItem>
 <TabItem label="Boosts">
     <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 10% boost for [[Webweaver bow]]
+
+- 5% boost for [[Lightbearer]]
+
+---
+
+</details>
+<details>
 <summary>Equipped Item Boosts</summary>
 To get these boosts, you need the item equipped in the right setup. The best boost you can use will automatically be used.
 
@@ -4738,15 +4753,13 @@ Range gear boosts:
 
 Range gear boosts:
 
-- 5% boost for [[Lightbearer]]
-
 - 5% boost for [[Venator ring]]
 
 ---
 
 Range gear boosts:
 
-- 5% boost for [[Zaryte crossbow]]
+- 15% boost for [[Zaryte crossbow]]
 
 ---
 
@@ -5543,18 +5556,35 @@ You can have one of the following boosts:
 </TabItem>
 <TabItem label="Boosts">
     <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 10% boost for [[Voidwaker]]
+
+---
+
+</details>
+<details>
 <summary>Equipped Item Boosts</summary>
 To get these boosts, you need the item equipped in the right setup. The best boost you can use will automatically be used.
 
 Melee gear boosts:
 
-- 3% boost for [[Avernic defender]]
+- 25% boost for [[Soulreaper axe]]
 
 ---
 
 Melee gear boosts:
 
-- 3% boost for [[Ferocious gloves]]
+- 5% boost for [[Avernic defender]]
+
+---
+
+Melee gear boosts:
+
+- 5% boost for [[Ferocious gloves]]
 
 ---
 
@@ -5597,7 +5627,7 @@ These boosts are for items which degrade or have charges.
 
 Melee gear boosts:
 
-- 15% boost for [[Scythe of vitur]]
+- 20% boost for [[Scythe of vitur]]
 
 ---
 
@@ -6137,6 +6167,8 @@ You can have one of the following boosts:
 
 - You can check the collection log leaderboard using: [[/lb cl cl\:Warped Terrorbird]]
 
+- You can dwarf multicannon this monster [[/k name\:Warped Terrorbird method\:cannon]]
+
 </TabItem>
 <TabItem label="Costs">
     - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
@@ -6166,6 +6198,8 @@ You can have one of the following boosts:
 - You can check your collection log using: [[/cl name\:Warped Tortoise]]
 
 - You can check the collection log leaderboard using: [[/lb cl cl\:Warped Tortoise]]
+
+- You can dwarf multicannon this monster [[/k name\:Warped Tortoise method\:cannon]]
 
 </TabItem>
 <TabItem label="Costs">
@@ -6370,6 +6404,8 @@ You can have one of the following boosts:
 ---
 
 You can have one of the following boosts:
+
+- 4% boost for [[Saturated heart]]
 
 - 3% boost for [[Imbued heart]]
 
